frontend/test/should_fail/computations_no_proc_method.grg
using computations_no_proc_method;

procedure foo()
{
	return;
}
